--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,16 @@
             "email": "oaattia@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+      "php" : "~7.0",
+      "slim/slim": "^3.8"
+    },
     "require-dev": {
         "phpspec/phpspec": "^3.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "Oaattia\\ContactForm\\": "src/"
+        }
     }
 }
