--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "bulma": "^0.4.2",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-csso": "^3.0.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "jQuery": "^1.7.4",
+    "parsleyjs": "^2.7.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
