--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-uglify": "^3.0.0",
     "jQuery": "^1.7.4",
     "parsleyjs": "^2.7.2",
+    "sweetalert2": "^6.6.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
