--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "vlucas/phpdotenv": "^2.4",
     "mailgun/mailgun-php": "^2.3",
     "php-http/curl-client": "^1.7",
-    "guzzlehttp/psr7": "^1.4"
+    "guzzlehttp/psr7": "^1.4",
+    "doctrine/dbal": "^2.5",
+    "doctrine/migrations": "^1.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.2"
