add the final doc

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+######## from mailgun developer page
 MAILGUN_API=
 DOMAINNAME=
-DEBUG=true
+
+####### some other setting preference like the admin contact email and debug mode
+DEBUG=false
 CONTACT_EMAIL=admin@email.com
