--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "bulma": "^0.4.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-csso": "^3.0.0",
